--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,8 @@ ul {
 }
 
 .logo {
+	display: block;
+
     width: 220px;
     box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
     background-color: #ee3643;
@@ -228,13 +230,13 @@ ul {
 .main-nav {
 	font-size: 17px;
 	line-height: 17px;
-
-	box-shadow: inset 0px -5px 0 0 #293449;
-    background-color: #32425c;
 }
 
 .main-nav ul {
 	list-style: none;
+
+	box-shadow: inset 0px -5px 0 0 #293449;
+    background-color: #32425c;
 }
 
 .main-nav .main-nav__list-item-link {
@@ -319,6 +321,7 @@ ul {
 }
 
 .main_popular-list {
+	flex-wrap: wrap;
 	list-style: none;
 }
 
@@ -349,6 +352,9 @@ ul {
 	font-family: "PT Sans", Arial, sans-serif;
 	text-align: center;
 	font-weight: bold;
+
+	width: 25%;
+	max-width: 220px;
 }
 
 .catalog-item-title {
@@ -417,7 +423,6 @@ ul {
 }
 
 .main_service {
-	background-color: #f4f7f9;
 }
 
 .main_service-title,
@@ -437,6 +442,8 @@ ul {
 
 .main_service-list {
 	list-style: none;
+
+	background-color: #f4f7f9;
 }
 
 .main_service-stripe{
@@ -788,6 +795,19 @@ ul {
     background-color: #ffffff;
 }
 
+.continue-button:hover,
+.continue-button:active {
+	background-color: #ffffff;
+}
+
+.continue-button-text:hover {
+	color: #ee3643;
+}
+
+.continue-button-text:active {
+    color: rgba(0, 0, 0, 0.3);
+}
+
 .close-button {
 	background-color: transparent;
 	border: none;
@@ -795,6 +815,8 @@ ul {
 	height: 21px;
 	background-image: url("../img/cross-red.svg");
 }
+
+
 
 
 
