--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ a {
 	text-decoration: none;
 }
 
-ul {
+ul,
+fieldset {
 	padding: 0;
 	margin: 0;
 }
@@ -151,6 +152,10 @@ ul {
 
 .header__user-button-text {
 	padding-left: 17px;
+}
+
+.header__search-form {
+	overflow: hidden;
 }
 
 .header__search-form-input {
@@ -297,7 +302,9 @@ ul {
 }
 
 .sign-in-button,
-.sign-up-button {
+.sign-up-button,
+.header_profile-button,
+.header_sign-out-button {
 	padding: 12px 25px;
 
 	color: #000000;
@@ -316,8 +323,71 @@ ul {
     color: rgba(0, 0, 0, 0.3);
 }
 
+.header_profile-button {
+	padding-left: 13px;
+	padding-right: 27px;
+}
+
+.profile-button-icon {
+	margin-right: 8px;
+	margin-top: 2px;
+	margin-bottom: -2px;
+}
+
+.header_profile-button:hover path,
+.header_profile-button:focus path {
+	fill: #32425C;
+}
+
+.header_profile-button:active path {
+	fill: #c5c5c5;
+}
+
+.header_profile-button:active {
+	color: rgba(0, 0, 0, 0.3);
+}
+
+.header_sign-out-button {
+	padding-top: 12px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 12px;
+}
+
+.sign-out-button-icon {
+	margin-top: 2px;
+	margin-bottom: -2px;
+}
+
+.header_sign-out-button:hover g,
+.header_sign-out-button:focus g {
+	fill: #32425C;
+}
+
+.header_sign-out-button:active g {
+	fill: #c5c5c5;
+}
+
 .header_user-info-list {
+	position: relative;
+	display: flex;
 	list-style: none;
+}
+
+.header__user-info-list-item {
+	margin: 15px 15px;
+}
+
+.header__user-info-list-item:not(:last-child)::after {
+	content: "";
+	position: absolute;
+	top: 25px;
+	left: 103px;
+	width: 4px;
+	height: 4px;
+	background-color: #32425c;
+	border-radius: 50%;
+
 }
 
 .header__user-info-list-item a {
@@ -740,12 +810,30 @@ ul {
 	width: 300px;
 }
 
-.breadcrumps {
+.breadcrumbs {
+	display: flex;
 	list-style: none;
 }
 
+.breadcrumbs__item {
+}
+
+.breadcrumbs__item:not(:last-child)::after {
+	content: "";
+	display: inline-block;
+
+	width: 9px;
+	height: 12px;
+	margin-bottom: -2px;
+	margin-left: 15px;
+	margin-right: 15px;
+	background-image: url("../img/icon-right-small.svg");
+
+}
+
+.breadcrumbs__item,
 .breadcrumbs__item-link,
-.breadcrumps-current {
+.breadcrumbs-current {
 	font-family: "PT Sans", Arial, sans-serif;
 	font-size: 13px;
 	line-height: 18px;
@@ -753,12 +841,33 @@ ul {
 	text-transform: uppercase;
 }
 
+.breadcrumbs__item-link:hover,
+.breadcrumbs__item-link:focus {
+	color: #ee3643;
+}
+
+.breadcrumbs__item-link:active {
+	color: rgba(0, 0, 0, 0.3);
+}
+
+.breadcrumbs-icon-home:hover g,
+.breadcrumbs-icon-home:focus g {
+	fill: #32425C;
+}
+
+.breadcrumbs-icon-home:active g {
+	fill: #C1C6CE;
+}
+
+
 .page-title {
 	font-size: 30px;
 	line-height: 30px;
 	color: #32425c;
 	text-transform: uppercase;
 	font-weight: normal;
+
+	padding: 30px;
 
 	background-color: #f2f6f8;
 }
@@ -790,8 +899,30 @@ ul {
 	background-color: #f7f3ec;
 }
 
+.catalog-filter-title {
+	padding: 10px 18px;
+	margin: 0;
+}
+
 .catalog-filter-fieldset {
 	border: none;
+	margin-bottom: 5px;
+}
+
+legend.catalog-filter_section-title::before {
+	content: "";
+	display: block;
+
+	width: 220px;
+	height: 1px;
+	background-color: #e5e5e5;
+
+	margin-bottom: 15px;
+
+}
+
+.catalog-filter-price {
+	margin-bottom: 25px;
 }
 
 .catalog-filter-price-range {
@@ -804,6 +935,15 @@ ul {
 .price-range {
 	background-color: #f7f3ec;
 	border: none;
+
+	width: 95px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+}
+
+.simple-dash {
+	padding: 3px;
 }
 
 .catalog-filter_section-title {
@@ -813,15 +953,65 @@ ul {
     font-weight: bold;
     text-transform: uppercase;
     color: #000000;
+
+    margin-top: 13px;
+    margin-bottom: 13px;
+}
+
+.catalog-filter-price_rectangle {
+	position: relative;
+	width: 220px;
+	height: 80px;
+	padding-top: 39px;
+	margin-bottom: 9px;
+
+	background-color: #f7f3ec;
+}
+
+.catalog-filter-price_graystripe {
+	width: 180px;
+	height: 2px;
+	margin-right: 20px;
+	margin-left: 20px;
+
+    background-color: #d7dcde;
+}
+
+.catalog-filter-price_greenstripe {
+	position: absolute;
+	top: 39px;
+	left: 21px;
+
+	width: 152px;
+	height: 2px;
+    background-color: #00ca74;
+}
+
+.filter-button-first {
+	position: absolute;
+	z-index: 10;
+	top: 30px;
+	left: 20px;
+}
+
+.filter-button-second {
+	position: absolute;
+	top: 30px;
+	left: 160px;
 }
 
 .catalog-filter_brand-name,
 .catalog-filter_charge-name {
+	display: flex;
+	align-items: center;
+
 	font-family: "PT Sans", Arial, sans-serif;
 	font-size: 15px;
 	line-height: 20px;
     text-transform: uppercase;
     color: #000000;
+
+    margin-bottom: 16px;
 }
 
 .catalog-filter_brand-name img,
@@ -860,9 +1050,23 @@ ul {
 	opacity: 0.4;
 }
 
+.brand-checkbox-off {
+	margin-right: 12px;
+}
+.brand-checkbox-on {
+	margin-right: 8px;
+}
+
+.charge-radio-on,
+.charge-radio-off {
+	margin-right: 10px;
+}
+
 .catalog-button {
 	background-color: #ffffff;
 	border: 1px solid #e5e5e5;
+	padding: 10px 40px;
+	border-radius: 3px;
 }
 
 .catalog-button:hover,
@@ -881,14 +1085,46 @@ ul {
 	border: none;
 }
 
+.catalog-filter-fieldset + .catalog-button {
+	margin-top: 54px;
+}
+
 .catalog {
 	width: 700px;
+}
+
+.catalog-sort {
+	display: flex;
+	align-items: center;
+}
+
+.catalog-sort-title {
+	margin-left: 20px;
+	margin-right: 140px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .catalog-sort_js-button {
 	opacity: 0.3;
 
 	border-bottom: 1px dotted #ee3643;
+}
+
+.catalog-sort_js-button:first-of-type {
+	margin-right: 71px;
+}
+
+.catalog-sort_js-button:nth-of-type(2) {
+	margin-right: 65px;
+}
+
+.catalog-sort_js-button:nth-of-type(3) {
+	margin-right: 46px;
+}
+
+.catalog-sort_js-button:nth-of-type(4) {
+	margin-right: 21px;
 }
 
 .catalog-sort_js-button:hover,
@@ -902,6 +1138,16 @@ ul {
 	color: #ee3643;
 
 	border: none;
+}
+
+.triangle-button,
+.triangle-button:hover,
+.triangle-button:focus {
+	border: none;
+}
+
+.triangle-button:active path {
+	fill: #ee3643;
 }
 
 .catalog-list,
@@ -960,7 +1206,10 @@ ul {
 }
 
 .main-footer .logo {
-	padding: 20px 40px;
+	display: flex;
+	justify-content: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .main-footer ul{
@@ -1112,17 +1361,32 @@ ul {
 	border-top: 7px solid #ee3643;
 }
 
+.mail-form {
+	padding-top: 48px;
+	padding-left: 80px;
+	padding-right: 80px;
+}
+
 .mail-form-label {
 	display: block;
 
 	font-size: 18px;
 	line-height: 18px;
 	color: #000000;
+
+	padding-bottom: 13px;
 }
 
 .mail-form-input,
 .mail-form-textarea {
+	font-family: "PT Sans", Arial, sans-serif;
+	font-size: 13px;
+	line-height: 18px;
+
     border: 2px solid #d7dcde;
+    border-radius: 3px;
+
+    padding: 8px 14px;
 }
 
 .mail-form-input:hover,
@@ -1134,6 +1398,18 @@ ul {
 .mail-form-input:focus,
 .mail-form-textarea:focus {
     border: 2px solid #ee3643;
+}
+
+.modal-map {
+	position: absolute;
+	width: 940px;
+	height: 146px;
+}
+
+.modal-map .close-button {
+	position: absolute;
+	top: 9px;
+	right: 9px;
 }
 
 .form-block__button,
